--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Africa's leading B2B marketplace connecting verified suppliers and buyers across 54 countries. Trade. Trust. Thrive." />
     <title>AFRIKONI - Trade. Trust. Thrive. | African B2B Marketplace</title>
+    
+    <!-- Google Analytics 4 will be loaded dynamically via main.jsx -->
   </head>
   <body>
     <div id="root"></div>
