--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Africa's leading B2B marketplace connecting verified suppliers and buyers across 54 countries. Trade. Trust. Thrive." />
+    <meta name="theme-color" content="#603813" />
     <title>AFRIKONI - Trade. Trust. Thrive. | African B2B Marketplace</title>
+    
+    <!-- Favicons -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     
     <!-- Google Analytics 4 will be loaded dynamically via main.jsx -->
   </head>
