--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="description" content="Africa's leading B2B marketplace connecting verified suppliers and buyers across 54 countries. Trade. Trust. Thrive." />
     <title>AFRIKONI - Trade. Trust. Thrive. | African B2B Marketplace</title>
     
-    <!-- Favicons -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- Favicons - Afrikoni Gold/Brown Logo -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg?v=2" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
     <link rel="apple-touch-icon" href="/favicon.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <meta name="theme-color" content="#3F2B1A" />
+    <meta name="theme-color" content="#603813" />
     
     <!-- Google Analytics 4 will be loaded dynamically via main.jsx -->
   </head>
