feat: Mobile optimization + Dashboard restructuring
- Optimize mobile responsiveness (KPI grids, touch targets, typography)
- Restructure buyer/seller/hybrid/logistics dashboards with hierarchical menus
- Add zero-metric guidance for buyers with actionable CTAs
- Improve mobile UX with proper touch targets (44px min) and smooth scrolling
- Fix horizontal overflow issues and prevent text zoom on iOS
- Enhance CTA buttons for mobile (full-width on small screens)
- Add touch-manipulation and active states for better mobile feedback
- Optimize typography sizes for mobile readability (h1: 32px, h2: 24px, h3: 20px)
- Update sidebar menu with collapsible sections and proper mobile behavior
- Ensure all interactive elements meet accessibility standards

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="theme-color" content="#603813" />
     
+    <!-- Inter Font - Institutional Typography -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    
     <!-- Google Analytics 4 will be loaded dynamically via main.jsx -->
   </head>
   <body>
