--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Africa's leading B2B marketplace connecting verified suppliers and buyers across 54 countries. Trade. Trust. Thrive." />
     <title>AFRIKONI - Trade. Trust. Thrive. | African B2B Marketplace</title>
